[1.8] Issue 4616: Search Field must show some indication for search being wrapped around
http://code.google.com/p/fbug/source/detail?r=11287

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -151,6 +151,12 @@
     color: #FFFFFF;
 }
 
+.fbsearch-textbox[status='wraparound']{
+    background-image:url(chrome://global/skin/icons/wrap.png);
+    background-position: 98% center;
+    background-repeat: no-repeat
+}
+
 .fbsearch-textbox {
     -moz-appearance: none;
     margin: 0 0px 1px 2px;
